# ComfyUI-GoPainter

./: ComfyUIGoPainter.py  __init__.py  package-lock.json  package.json  pyproject.toml
src/: App.vue  main.ts
src/components/: ImageProcessingTool.vue  NavigationBar.vue
src/components/common/: ColorPreservationSettings.vue  ColoringParameterSettings.vue  ConversionModeSettings.vue  DualImageUpload.vue  ImageUpload.vue  ModelSettings.vue  OutputDisplay.vue  OutputSettings.vue  ParameterSettings.vue  PromptSettings.vue  SendActions.vue  SendConvertActions.vue  ShadowParameterSettings.vue  StepActions.vue  StepSection.vue  VersionStyleSettings.vue
src/components/pages/: ColoringPage.vue  InkingPage.vue  LineartPage.vue  ShadowingPage.vue  UnderColoringPage.vue
src/composables/: useComfyWebSocket.ts
src/stores/: useLineartStore.ts
src/utils/: websocket.ts
workflows/: default.json  fetch-prompt.json
